# KAL-car

./: README.md  calculate_parameter_s.m  path.mat  update demo video
kal/: CMakeLists.txt  package.xml
kal/launch/: demo_path_follower.launch
kal/res/: path.yaml  path_clockwise.yaml  path_rough.yaml  path_smooth.yaml  path_smooth_clockwise.yaml
kal/rviz/: kal.rviz
kal/setup/: kal_demo.repos
kal/templates/: .clang-tidy
kal3_control/: CMakeLists.txt  README.md  package.xml
kal3_control/include/kal3_controller/: controller.hpp  types.hpp
kal3_control/include/kal3_controller/internal/: utils.hpp
kal3_control/src/: PID_controller.cpp
kal3_control/test/: test_PID_controller.cpp  test_utils.cpp
kal3_controller_ros_tool/: CMakeLists.txt  CODEOWNERS  README.md  nodelet_plugins.xml  package.xml
kal3_controller_ros_tool/cfg/: Kal3_Controller.rosif
kal3_controller_ros_tool/launch/: controller_node.launch  controller_node_standalone.launch  controller_nodelet.launch
kal3_controller_ros_tool/launch/params/: Kal3_Controller_parameters.yaml
kal3_controller_ros_tool/src/kal3_controller/: conversions.hpp  kal3_controller.cpp  kal3_controller.hpp  kal3_controller_node.cpp  kal3_controller_nodelet.cpp
kal3_controller_ros_tool/test/: Kal3_Controller_test_parameters.yaml  kal3_controller_node.cpp  kal3_controller_node.test
kal3_matlab_simulink/: KAL_MPC.slx  KAL_PID.slx  KAL_PID.slxc  MpcRefMdl.slx  README.md  closestPointOnLine.m  createCostmap.m  helperGoalChecker.m  helperSLCreateUtilityBus.m  helperSLCreateUtilityStruct.m  helperSLVisualizePath.m
kal3_perception/: .gitlab-ci.yml  CODEOWNERS  DEADJOE  README.md
kal3_perception/src/kal3_perception_detect/: CMakeLists.txt  package.xml
kal3_perception/src/kal3_perception_detect/yolov7/: detect.py  inference-ros-node.py  test.py  train.py
kal3_perception/src/kal3_perception_detect/yolov7/cfg/training/: yolov7-tiny.yaml  yolov7_kal3.yaml
kal3_perception/src/kal3_perception_detect/yolov7/data/: kal3_online.yaml  kal3_owndata.yaml
kal3_perception/src/kal3_perception_detect/yolov7/utils/: google_utils.py
kal3_perception/src/kal3_perception_mapping/: CMakeLists.txt  package.xml
kal3_perception/src/kal3_perception_mapping/src/: mapping_node.py  trajectory_node.py
kal3_perception/src/kal3_perception_mapping/src/lib/: deprojection.py  depth_processing.py  map.py  sign.py  utils.py
kal_trajectory_planner/: CMakeLists.txt  CODEOWNERS  README.md  package.xml
kal_trajectory_planner/include/kal_trajectory_planner/: trajectory_planner.hpp  types.hpp
kal_trajectory_planner/include/kal_trajectory_planner/internal/: utils.hpp
kal_trajectory_planner/src/: trajectory_planner.cpp
kal_trajectory_planner/test/: test_trajectory_planner.cpp  test_utils.cpp
kal_trajectory_planner_ros_tool/: CMakeLists.txt  CODEOWNERS  README.md  nodelet_plugins.xml  package.xml
kal_trajectory_planner_ros_tool/cfg/: TrajectoryPlanner.rosif
kal_trajectory_planner_ros_tool/launch/: trajectory_planner_node.launch  trajectory_planner_node_standalone.launch  trajectory_planner_nodelet.launch
kal_trajectory_planner_ros_tool/launch/params/: trajectory_planner_parameters.yaml
kal_trajectory_planner_ros_tool/src/trajectory_planner/: conversions.hpp  trajectory_planner.cpp  trajectory_planner.hpp  trajectory_planner_node.cpp  trajectory_planner_nodelet.cpp
kal_trajectory_planner_ros_tool/test/: trajectory_planner_node.cpp  trajectory_planner_node.test  trajectory_planner_test_parameters.yaml
