<?xml version="1.0"?>
<package format="2">
  <name>kal3_controller</name>
  <version>0.0.1</version>
  <description>the package to implement position control of the car with given paths</description>

  <license>BSD</license>
  <maintainer email="chuyang0628@gmail.com">Chuyang Deng</maintainer>
  <author email="chuyang0628@gmail.com">Chuyang Deng</author>
  <url type="repository">https://gitlab.mrt.kit.edu/kognitive_automobile_labor/kal3</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>eigen</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
